--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>JS blended</h1>
     <div class="container"></div>
-    <div id="sea">
+    <!-- <div id="sea">
         <img src="./img/boat-4283586.svg" alt="ship" id="ship" width="40" height="40" />
         ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
         ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
@@ -21,12 +21,12 @@
         ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
         ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
         ~ ~ ~ ~ ~
-    </div>
+    </div> -->
 
     <!-- <script src="./index.js"></script> -->
-        <!-- <script src="./index2.js"></script> -->
-<script src="./index3.js"></script>
-<!-- <script src="./index4.js"></script> -->
+    <!-- <script src="./index2.js"></script> -->
+    <!-- <script src="./index3.js"></script> -->
+    <script src="./index4.js"></script>
 </body>
 </html>
 
