--- a/piano.html
+++ b/piano.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/piano.css"/>
   </head>
   <body>
     <section>
@@ -153,6 +153,6 @@
         </li>
       </ul>
     </section>
-    <script src="./js/index.js"></script>
+    <script src="./js/piano.js"></script>
   </body>
 </html>
